# treki-cli

./: .gitignore  Cargo.toml  README.md
scripts/linux/: install.sh
scripts/windows/: install.bat
src/: cli.rs  lib.rs  main.rs
src/auth/: login.rs  whoami.rs
src/commands/: mod.rs  send.rs
src/utils/: config_path.rs  mod.rs  parser.rs  printer.rs
