[package]
name = "treki-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
colored = "3.0.0"
colored_json = "5.0.0"
directories = "6.0.0"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
rpassword = "7.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
